data/derived/comb/progs/unify/prog6909.ml.out
Characters 104-108:
  wwhile (fs true,b);;
             ^^^^
Error: This expression has type bool but an expression was expected of type
         int
